fixing while line right on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -963,7 +963,7 @@ button {
   height: auto;
   border-radius: 40px;
   position: relative;
-  margin-left: 20px;
+  margin-left: 0px;
 }
 
 .subscribe_bt {
